adjust C15 spacing, make sure C07 button doesnt inline

--- a/src/scss/components/_C15-quote.scss
+++ b/src/scss/components/_C15-quote.scss
@@ -1,7 +1,6 @@
 .C15-quote {
-  &__info {
-    padding: 20px 0 0;
-  }
+  margin-top: 60px;
+  margin-bottom: 40px;
 
   &__author {
     font-style: normal;
